--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
   },
   "dependencies": {
     "@20tab/react-leaflet-resetview": "^1.1.0",
+    "@headlessui/react": "^1.7.10",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@next/font": "13.1.6",
     "@vgrid/react-leaflet-heatmap-layer": "^4.0.3",
+    "autoprefixer": "^10.4.13",
     "dirty-json": "0.9.2",
     "formatcoords": "^1.1.3",
     "i18next": "^22.4.9",
@@ -49,6 +51,7 @@
     "next-pwa": "^5.6.0",
     "next-seo": "^5.15.0",
     "notistack": "^2.0.8",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.1.5",
@@ -56,6 +59,7 @@
     "react-tweet-embed": "^2.0.0",
     "supercluster": "^7.1.5",
     "swr": "^2.0.3",
+    "tailwindcss": "^3.2.6",
     "use-debounce": "9.0.3",
     "use-supercluster": "^0.4.0",
     "zustand": "^4.3.2"
